<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/city_name_in_city_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/default_city"
        android:textSize="@dimen/text_22" />

    <ImageView
        android:id="@+id/icon_weather_in_city_list"
        android:layout_width="@dimen/medium_image"
        android:layout_height="@dimen/medium_image"
        android:layout_weight="1"
        android:contentDescription="@string/weather_icon" />

    <TextView
        android:id="@+id/temperature_in_city_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/celsius"
        android:textSize="@dimen/text_22" />

</LinearLayout>
