<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/weather_card_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/sky_blue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_25"
            android:text="@string/city_name_example"
            android:textSize="@dimen/text_36" />

        <TextView
            android:id="@+id/current_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/clear"
            android:textSize="@dimen/text_18" />

        <TextView
            android:id="@+id/current_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/celsius"
            android:textSize="@dimen/text_48" />

        <LinearLayout
            android:id="@+id/temperature_range"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/minimal_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minimum"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/maximal_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_5"
                android:text="@string/maximum"
                android:textSize="@dimen/text_14" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hourly_weather_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginTop="@dimen/margin_5"
            android:background="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/week_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sunrise_time"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunrise"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/sunset_time"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sunset"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginHorizontal="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/chance_precipitation"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chance_of_precipitation"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/humidity"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginHorizontal="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wind"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/feels_like"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feels_like"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginHorizontal="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/precipitation"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/precipitation"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/pressure"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pressure"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginHorizontal="@dimen/margin_25"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/visibility"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/visibility"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/uv_index"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uv_index"
                android:textSize="@dimen/text_16" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_line"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/black" />

    </LinearLayout>

<!--    <FrameLayout-->
    <!--        android:id="@+id/loadingLayout"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:background="@color/white"-->
    <!--        android:visibility="gone"-->
    <!--        tools:visibility="visible">-->

    <!--        <ProgressBar-->
    <!--            style="?android:attr/progressBarStyleLarge"-->
    <!--            android:layout_width="wrap_content"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_gravity="center" />-->
    <!--    </FrameLayout>-->

</androidx.core.widget.NestedScrollView>