<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/daily_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/week_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:layout_weight="2"
        android:text="@string/monday"
        android:textSize="@dimen/text_16" />

    <ImageView
        android:id="@+id/daily_weather_icon"
        android:layout_width="@dimen/small_image"
        android:layout_height="@dimen/small_image"
        android:layout_margin="@dimen/margin_10"
        android:layout_weight="3"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/daily_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:layout_weight="1"
        android:text="@string/celsius"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/daily_night_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:layout_weight="1"
        android:text="@string/celsius"
        android:textSize="@dimen/text_16" />

</LinearLayout>